# AGSlab

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  Resources.xml
include/cgraphics/: Camera.hpp  CameraController.hpp  Extensions.hpp  FramebufferObject.hpp  GraphicObject.hpp  InputManager.hpp  Light.hpp  Material.hpp  Mesh.hpp  NetProtocol.hpp  RenderManager.hpp  ResourceManager.hpp  Scene.hpp  Shader.hpp  SkyBox.hpp  Texture.hpp
shaders/: bounding_box.fsh  bounding_box.vsh  cube.fsh  cube.vsh  direct_light.fsh  direct_light.vsh  example.fsh  example.vsh  grey_post_processing.fsh  grey_post_processing.vsh  phong_texture.fsh  phong_texture.vsh  sepia_post_processing.fsh  simple_post_processing.fsh  skybox.fsh  skybox.vsh  spot_light.fsh  spot_light.vsh
src/: Camera.cpp  CameraController.cpp  Extensions.cpp  FramebufferObject.cpp  GraphicObject.cpp  InputManager.cpp  Mesh.cpp  NetProtocol.cpp  RenderManager.cpp  ResourceManager.cpp  Scene.cpp  Shader.cpp  SkyBox.cpp  Texture.cpp  main.cpp
